--- a/pages/delice.html
+++ b/pages/delice.html
@@ -5,142 +5,140 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OhMyFood</title>
-    <link rel="stylesheet" type="text/css" href="./assets/styles.css">
+    <link rel="stylesheet" type="text/css" href="../assets/styles.css">
+    <link rel="stylesheet" type="text/css" href="../assets/styles-pages.css">
+
     <script src="https://kit.fontawesome.com/af69d2ae7a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="container">
         <header>
-            <img src="assets/img/logo/ohmyfood@2x.svg" alt="logo">
+            <a href="/"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i></a>
+            <img src="../assets/img/logo/ohmyfood@2x.svg" alt="logo">
         </header>
 
         <main>
-            <section id="location-explore">
-                <div id="location">
-                    <i class="fa-solid fa-location-dot"></i>
-                    <p>Paris, Belleville</p>
-                </div>
-                <div id="explore">
-                    <h2>Réservez le menu qui vous convient</h2>
-                    <p>Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-                    <button>Explorez nos restaurants</button>
-                </div>
-            </section>
-
-            <section id="fonctionnement">
-                <h2>Fonctionnement</h2>
-                <div id="fonctionnement-cards">
-                    <article class="card">
-                        <p>1</p>
-                        <i class="fa-solid fa-mobile-screen-button" style="color: #7E7E7E;"></i>
-                        <p>Choisissez un restaurant</p>
-                    </article>
-                    <article class="card">
-                        <p>2</p>
-                        <i class="fa-solid fa-list-ul" style="color: #7E7E7E;"></i>
-                        <p>Composez votre menu</p>
-                    </article>
-                    <article class="card">
-                        <p>3</p>
-                        <!-- <i class="fa-solid fa-utensils" style="color: #9747FF;"></i> -->
-                        <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M17.5914 4.43686L15.6947 0.812378C15.5252 0.487014 15.2242 0.287598 14.9027 0.287598H3.09613C2.77466 0.287598 2.47365 0.487014 2.30415 0.812378L0.407495 4.43686C-0.571518 6.30858 0.296443 8.91149 2.12588 9.20887C2.25739 9.22986 2.39182 9.24035 2.52625 9.24035C3.39129 9.24035 4.15697 8.78554 4.683 8.08234C5.20904 8.78554 5.97764 9.24035 6.83976 9.24035C7.70479 9.24035 8.47047 8.78554 8.99651 8.08234C9.52254 8.78554 10.2911 9.24035 11.1533 9.24035C12.0183 9.24035 12.784 8.78554 13.31 8.08234C13.839 8.78554 14.6046 9.24035 15.4668 9.24035C15.6041 9.24035 15.7356 9.22986 15.8671 9.20887C17.7024 8.91499 18.5733 6.31208 17.5914 4.43686ZM15.4726 10.3634C15.1804 10.3634 14.891 10.3109 14.6105 10.2304V13.722H3.38837V10.2304C3.10782 10.3074 2.8185 10.3634 2.52625 10.3634C2.35091 10.3634 2.17264 10.3494 2.00022 10.3214C1.83656 10.2934 1.67583 10.2479 1.52094 10.1955V17.0806C1.52094 17.6998 1.93885 18.2001 2.45612 18.2001H15.5486C16.0659 18.2001 16.4838 17.6998 16.4838 17.0806V10.1955C16.326 10.2514 16.1681 10.2969 16.0045 10.3214C15.8262 10.3494 15.6509 10.3634 15.4726 10.3634Z" fill="#9356DC"/>
+            <section id="restaurant">
+                <img src="../assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
+                <div>
+                    <div id="restaurant-title">
+                        <h1>Le délice des sens</h1>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#FFF" stroke="black">
+                            <defs>
+                                <linearGradient id="custom-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
+                                    <stop offset="0%" style="stop-color: #c471f5" />
+                                    <stop offset="100%" style="stop-color: #fa71cd" />
+                                </linearGradient>
+                            </defs>
+                            <path class="gradient-path" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
                         </svg>
-                            
-                        <p>Dégustez au restaurant</p>
-                    </article>
+                    </div>
+                    <h4>ENTRÉES</h4>
+                    <div id="restaurant-cards">
+                        <article class="card">
+                            <div>
+                                <p>Tartare de thon</p>
+                                <p>Assaisonné au yuzu</p>
+                            </div>
+                            <div class="price-and-check">
+                                <p class="price">25€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
+                        </article>
+                        <article class="card">
+                            <div>
+                                <p>Bouchée de homard croustillant</p>
+                                <p>Et sa farandole de petits légumes</p>
+                            </div>
+                            <div class="price-and-check">
+                                <p class="price">35€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
+                        </article>
+                        <article class="card">
+                            <div>
+                                <p>Velouté de cèpes</p>
+                                <p>Aux truffes</p>
+                            </div>
+                            <div class="price-and-check">
+                                <p class="price">20€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
+                        </article>
+                    </div>
+                    <h4>PLATS</h4>
+                    <div id="restaurant-cards">
+                        <article class="card">
+                            <div>
+                                <p>Poulet rôti aux herbes de Provence</p>
+                                <p>Et sa crème de truffe</p>
+                            </div>
+                            <div class="price-and-check">
+                                <p class="price">40€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
+                        </article>
+                        <article class="card">
+                            <div>
+                                <p>Langouste rôtie</p>
+                                <p>Et ses légumes de saison</p>
+                            </div>
+                            <div class="price-and-check">
+                                <p class="price">35€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
+                        </article>
+                        <article class="card">
+                            <div>
+                                <p>Côte de bœuf Angus</p>
+                                <p>Et sa purée de panais</p>
+                            </div>
+                            <div class="price-and-check">
+                                <p class="price">44€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
+                        </article>
+                    </div>
+                    <h4>DESSERTS</h4>
+                    <div id="restaurant-cards">
+                        <article class="card">
+                            <div>
+                                <p>Farandole de desserts</p>
+                                <p>Du chef</p>
+                            </div>
+                            <div class="price-and-check">
+                                <p class="price">18€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
+                        </article>
+                        <article class="card">
+                            <div>
+                                <p>Crème brulée</p>
+                                <p>Revisitée</p>
+                            </div>
+                            <div class="price-and-check">
+                                <p class="price">22€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
+                        </article>
+                        <article class="card">
+                            <div>
+                                <p>Tiramisu</p>
+                                <p>À la noisette</p>
+                            </div>
+                            <div class="price-and-check">
+                                <p class="price">23€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
+                        </article>
+                    </div>
+                    <div id="btn">
+                        <button >Commander</button>
+                    </div>
                 </div>
             </section>
 
-            <section id="restaurants">
-                <h2>Restaurants</h2>
-                <div id="restaurants-cards">
-                    <article class="card">
-                        <a href="/pages/palette.html">
-                        <img src="./assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
-                        <div class="nouveau">Nouveau</div>
-                        <div class="card-content">
-                            <div>
-                                <p>La palette du goût</p>
-                                <p>Ménilmontant</p>
-                            </div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#FFF" stroke="black">
-                                <defs>
-                                    <linearGradient id="custom-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                                      <stop offset="0%" style="stop-color: #c471f5" />
-                                      <stop offset="100%" style="stop-color: #fa71cd" />
-                                    </linearGradient>
-                                  </defs>
-                                <path class="gradient-path" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
-                            </svg>
-                        </div>
-                        </a>
-                    </article>
-                    <article class="card">
-                        <a href="/pages/note.html">
-                            <img src="./assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant">
-                        <div class="nouveau">Nouveau</div>
-                        <div class="card-content">
-                            <div>
-                                <p>La note enchantée</p>
-                                <p>Charonne</p>
-                            </div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#FFF" stroke="black">
-                                <defs>
-                                    <linearGradient id="custom-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                                      <stop offset="0%" style="stop-color: #c471f5" />
-                                      <stop offset="100%" style="stop-color: #fa71cd" />
-                                    </linearGradient>
-                                  </defs>
-                                <path class="gradient-path" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
-                            </svg>                        
-                        </div>
-                        </a>
-                    </article>
-                    <article class="card">
-                        <a href="/pages/francaise.html">
-                        <img src="./assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant">
-                        <div class="card-content">
-                            <div>
-                                <p>À la française</p>
-                                <p>Cité rouge</p>
-                            </div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#FFF" stroke="black">
-                                <defs>
-                                    <linearGradient id="custom-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                                      <stop offset="0%" style="stop-color: #c471f5" />
-                                      <stop offset="100%" style="stop-color: #fa71cd" />
-                                    </linearGradient>
-                                  </defs>
-                                <path class="gradient-path" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
-                            </svg>                        
-                        </div>
-                    </a>
-                    </article>
-                    <article class="card">
-                        <a href="/pages/delice.html">
-                        <img src="./assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
-                        <div class="card-content">
-                            <div>
-                                <p>Le délice des sens</p>
-                                <p>Folie-Méricourt</p>
-                            </div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#FFF" stroke="black">
-                                <defs>
-                                    <linearGradient id="custom-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-                                      <stop offset="0%" style="stop-color: #c471f5" />
-                                      <stop offset="100%" style="stop-color: #fa71cd" />
-                                    </linearGradient>
-                                  </defs>
-                                <path class="gradient-path" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
-                            </svg>                        
-                        </div>
-                    </a>
-                    </article>
-
-                </div>
-            </section>
         </main>
 
         <footer>
@@ -163,8 +161,7 @@
                 <p>Devenir partenaire</p>
             </div>   
             <p>Mentions légales</p>
-            <p>Contact</p>        
-            
+            <p>Contact</p>                    
         </footer>
     </div>
 </body>
