--- a/pages/note.html
+++ b/pages/note.html
@@ -41,28 +41,40 @@
                                 <p>Ravioles de foie gras</p>
                                 <p>Accompagnées de leur crème à la truffe</p>
                             </div>
-                            <p class="price">25€</p>
+                            <div class="price-and-check">
+                                <p class="price">25€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                         <article class="card">
                             <div>
                                 <p>Caviar osciètre</p>
                                 <p>Sur blini à la farine de blé noir</p>
                             </div>
-                            <p class="price">35€</p>
+                            <div class="price-and-check">
+                                <p class="price">35€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                         <article class="card">
                             <div>
                                 <p>Homard et espuma de potiron</p>
                                 <p>Marinés aux zestes d'orange</p>
                             </div>
-                            <p class="price">20€</p>
+                            <div class="price-and-check">
+                                <p class="price">20€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                         <article class="card">
                             <div>
                                 <p>Foie gras de canard cuit entier</p>
                                 <p>Confiture de figue et pain toasté</p>
                             </div>
-                            <p class="price">35€</p>
+                            <div class="price-and-check">
+                                <p class="price">35€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                     </div>
                     <h4>PLATS</h4>
@@ -72,21 +84,30 @@
                                 <p>Noix de coquilles Saint-Jacques</p>
                                 <p>Sur lit de purée de céleri-rave</p>
                             </div>
-                            <p class="price">40€</p>
+                            <div class="price-and-check">
+                                <p class="price">40€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                         <article class="card">
                             <div>
                                 <p>Langoustine poêlée</p>
                                 <p>Purée de patate douce</p>
                             </div>
-                            <p class="price">35€</p>
+                            <div class="price-and-check">
+                                <p class="price">35€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                         <article class="card">
                             <div>
                                 <p>Mijoté de queue de bœuf</p>
                                 <p>Et riz sauvage aux zestes de citron</p>
                             </div>
-                            <p class="price">45€</p>
+                            <div class="price-and-check">
+                                <p class="price">45€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                     </div>
                     <h4>DESSERTS</h4>
@@ -96,21 +117,30 @@
                                 <p>Macaron noisette et chocolat</p>
                                 <p>Glace au caramel brun et sel de Guérande</p>
                             </div>
-                            <p class="price">18€</p>
+                            <div class="price-and-check">
+                                <p class="price">18€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                         <article class="card">
                             <div>
                                 <p>Baba au rhum revisité</p>
                                 <p>Avec son coulis de citron</p>
                             </div>
-                            <p class="price">22€</p>
+                            <div class="price-and-check">
+                                <p class="price">22€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                         <article class="card">
                             <div>
                                 <p>Tarte au citron meringuée</p>
                                 <p>Déstructurée</p>
                             </div>
-                            <p class="price">23€</p>
+                            <div class="price-and-check">
+                                <p class="price">23€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                     </div>
                     <div id="btn">
