--- a/pages/palette.html
+++ b/pages/palette.html
@@ -41,21 +41,30 @@
                                 <p>Fricassée d'escargots</p>
                                 <p>Au piment d'Espelette</p>
                             </div>
-                            <p class="price">25€</p>
+                            <div class="price-and-check">
+                                <p class="price">25€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>
                         </article>
                         <article class="card">
                             <div>
                                 <p>Foie gras de canard mi-cuit</p>
                                 <p>Et ses copeaux de truffe noire</p>
                             </div>
-                            <p class="price">35€</p>
+                            <div class="price-and-check">
+                                <p class="price">35€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                         <article class="card">
                             <div>
                                 <p>Œuf au plat</p>
                                 <p>Assaisonné à la truffe sur lit de caviar</p>
                             </div>
-                            <p class="price">20€</p>
+                            <div class="price-and-check">
+                                <p class="price">30€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                     </div>
                     <h4>PLATS</h4>
@@ -65,21 +74,30 @@
                                 <p>Filet de bœuf aux herbes</p>
                                 <p>Accompagné de sa ribambelle de légumes</p>
                             </div>
-                            <p class="price">40€</p>
+                            <div class="price-and-check">
+                                <p class="price">40€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>
                         </article>
                         <article class="card">
                             <div>
                                 <p>Parmentier de queue de bœuf</p>
                                 <p>À la truffe noire sur sa purée de panais</p>
                             </div>
-                            <p class="price">35€</p>
+                            <div class="price-and-check">
+                                <p class="price">35€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                         <article class="card">
                             <div>
                                 <p>Filet de turbot</p>
                                 <p>Aux agrumes</p>
                             </div>
-                            <p class="price">44€</p>
+                            <div class="price-and-check">
+                                <p class="price">44€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                     </div>
                     <h4>DESSERTS</h4>
@@ -89,21 +107,30 @@
                                 <p>Paris-Brest</p>
                                 <p>Revisité</p>
                             </div>
-                            <p class="price">18€</p>
+                            <div class="price-and-check">
+                                <p class="price">18€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                         <article class="card">
                             <div>
                                 <p>Macaron au chocolat d'exception</p>
                                 <p>Et glace à la vanille de Madagascar</p>
                             </div>
-                            <p class="price">22€</p>
+                            <div class="price-and-check">
+                                <p class="price">22€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                         <article class="card">
                             <div>
                                 <p>Mousse au chocolat</p>
                                 <p>Au piment d'Espelette et à la truffe noire</p>
                             </div>
-                            <p class="price">23€</p>
+                            <div class="price-and-check">
+                                <p class="price">23€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check" style="color: #ffffff;"></i></div>
+                            </div>                        
                         </article>
                     </div>
                     <div id="btn">
