--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h2>Restaurants</h2>
                 <div id="restaurants-cards">
                     <article class="card">
-                        <a href="/pages/palette.html">
+                        <a href="pages/palette.html">
                         <img src="./assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
                         <div class="nouveau">Nouveau</div>
                         <div class="card-content">
@@ -72,7 +72,7 @@
                         </a>
                     </article>
                     <article class="card">
-                        <a href="/pages/note.html">
+                        <a href="pages/note.html">
                             <img src="./assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant">
                         <div class="nouveau">Nouveau</div>
                         <div class="card-content">
@@ -86,7 +86,7 @@
                         </a>
                     </article>
                     <article class="card">
-                        <a href="/pages/francaise.html">
+                        <a href="pages/francaise.html">
                         <img src="./assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant">
                         <div class="card-content">
                             <div>
@@ -99,7 +99,7 @@
                     </a>
                     </article>
                     <article class="card">
-                        <a href="/pages/delice.html">
+                        <a href="pages/delice.html">
                         <img src="./assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
                         <div class="card-content">
                             <div>
