--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <section id="location-explore">
                 <form id="location" action="#">
                     <i class="fa-solid fa-location-dot"></i>
-                    <input type="text" name="ville" value="Paris, Belleville" class="input">
+                    <input type="text" name="ville" placeholder="Paris, Belleville" class="input">
                 </form>
                 <div id="explore">
                     <h2>Réservez le menu qui vous convient</h2>
