--- a/pages/note.html
+++ b/pages/note.html
@@ -165,7 +165,7 @@
                 <p>Devenir partenaire</p>
             </div>   
             <p>Mentions légales</p>
-            <p>Contact</p>                    
+            <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>        
         </footer>
     </div>
 </body>
